@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.42 2004/09/02 11:13:27 jmmv Exp $
+$NetBSD: distinfo,v 1.43 2004/10/21 05:28:17 xtraeme Exp $
 
-SHA1 (libxml2-2.6.13.tar.bz2) = 990700b9c97430cd6d416a1f7a673925d62d99c1
-Size (libxml2-2.6.13.tar.bz2) = 2783813 bytes
+SHA1 (libxml2-2.6.14.tar.bz2) = d74874983bee7115b519283345e44d989303d644
+Size (libxml2-2.6.14.tar.bz2) = 2905027 bytes
 SHA1 (patch-aa) = 79ca42b0b78dda1581eb567fd02c77cbd500fe10
 SHA1 (patch-ab) = 90def7e936411ee7a28a51050e43a55d85526935
